--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "log4js": "^1.1.1",
     "mongodb": "^2.2.27",
